--- a/src/app/component/nav/nav.component.html
+++ b/src/app/component/nav/nav.component.html
@@ -3,7 +3,7 @@
     <div class="nav-links">
         <a routerLink="">Home</a>
         <a routerLink="challenges">All Challenges</a>
-        <a routerLink="createChallenge">העלאת אתגר</a>
+        <a routerLink="createChallenge">Upload challenge</a>
         
         @if (isLoggedIn$ | async) {
             <a routerLink="profile"> Profile</a>
