--- a/src/app/component/profile/profile.component.html
+++ b/src/app/component/profile/profile.component.html
@@ -3,15 +3,11 @@
     
     @if (currentUsername) {
         <p class="welcome-message">
-            שלום, **{{ currentUsername }}**! ברוך הבא לאזור הפרופיל שלך.
+            שלום , {{ currentUsername }} 
         </p>
     }
     
-    @if (currentUsername) {
-        <p class="welcome-message">
-            שלום, **{{ currentUsername }}**! ברוך הבא לאזור הפרופיל שלך.
-        </p>
-    }
+   
     
     @if (isLoading) {
        <div class="loading-message">טוען...</div>
