--- a/src/app/component/challenge-details/challenge-details.component.css
+++ b/src/app/component/challenge-details/challenge-details.component.css
@@ -70,6 +70,7 @@
     line-height: 1.6;
     color: #333;
     text-align: right;
+    white-space: pre-wrap
 }
 
 /* ==================================== */
