--- a/src/app/component/create-challenge/create-challenge.component.html
+++ b/src/app/component/create-challenge/create-challenge.component.html
@@ -38,7 +38,7 @@
                 [(ngModel)]="newChallenge.description"
                 required
                 minlength="10" 
-                maxlength="1000" 
+                maxlength="1000000" 
                 #descriptionControl="ngModel"></textarea>
 
             @if (descriptionControl.invalid && descriptionControl.touched) {
